# ocaml_fp_principles

./: .gitignore  LICENSE  README.MD  dune-project  ocaml_fp_principles.opam
lib/: adt.ml  applicative.ml  applicative_validation.ml  closures.ml  deforestation.ml  dune  functor.ml  hof.ml  immutability.ml  lazy_streams.ml  monad.ml  parser_combinator.ml  pattern_matching.ml  semigroup.ml  stream_fusion.ml  streams.ml  totality.ml
test/: dune
