(lang dune 3.19)

(name ocaml_fp_principles)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Martin Putniorz <mputniorz@gmail.com>")

(license LICENSE)

(package
 (name ocaml_fp_principles)
 (synopsis "OCaml learning project")
 (description "A longer description")
 (depends ocaml ppx_inline_test)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
