(library
 (name ocaml_fp_principles)
 (inline_tests)
 (modules
  adt
  pattern_matching
  hof
  closures
  immutability
  totality
  streams
  lazy_streams
  stream_fusion
  deforestation
  functor
  applicative
  monad
  parser_combinator
  applicative_validation
  )
 (libraries str)
 (preprocess
  (pps ppx_jane)))
